tests/test_scope/bad/scope.catala
## [Article]

```catala
new scope A:
  param a content int
  param b content int
  param c content bool

scope A:
  def c := false
  def a [| c |] := 42
  def a [| not c |] := 0
  def b [| not c |] := 1337
  def b [| not c |] := 0
```
